Configuração do GitHub Pages 5

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       name="description"
       content="CardTrack - Sistema de Gestão Financeira para MEI"
     />
-    
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/logocardtrack.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/logocardtrack.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>CardTrack - Gestão Financeira MEI</title>
 
