--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
       name="description"
       content="CardTrack - Sistema de Gestão Financeira para MEI"
     />
-    <link rel="icon" href="%PUBLIC_URL%/assets/logocardtrack.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/logocardtrack.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="./src/assets/logocardtrack.png" />
+   
     <title>CardTrack - Gestão Financeira MEI</title>
 
     <!-- Bootstrap CSS -->
