--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0d6efd" />
-    <meta
-      name="description"
-      content="CardTrack - Sistema de Gestão Financeira para MEI"
-    />
+    <meta name="description" content="CardTrack - Sistema de Gestão Financeira para MEI" />
     <link rel="icon" href="./src/assets/logocardtrack.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="%PUBLIC_URL%/main.js"></script>
+
    
     <title>CardTrack - Gestão Financeira MEI</title>
 
