--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta 
+      name="viewport" 
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <meta name="theme-color" content="#0d6efd" />
     <meta name="description" content="CardTrack - Sistema de Gestão Financeira para MEI" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
